--- a/template/report_template.tex
+++ b/template/report_template.tex
@@ -6,6 +6,35 @@
 \usepackage{titlesec}
 \usepackage{longtable}
 \usepackage[top=0.7in,bottom=1in,left=0.85in,right=0.85in]{geometry}
+\usepackage[utf8]{inputenc}
+\usepackage{listings}
+\usepackage{xcolor}
+
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{mystyle}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\ttfamily\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2
+}
+ 
+\lstset{style=mystyle}
 
 % title formatting
 \titleformat{\section}
@@ -78,6 +107,9 @@ asdfasdf
 \lipsum[4-5]
 
 \section{Computational Analysis}
-\lipsum[1-5]
+\lipsum[4-4]
 
+\lstinputlisting[language=Python]{samplecode.py}
+
+\lipsum[4-7]
 \end{document}
