--- a/ohm/lab.tex
+++ b/ohm/lab.tex
@@ -75,6 +75,12 @@ The setup of the circuit was as follows:
     \item the same side of the resistor also connected to the positive terminal of the power supply
 \end{itemize}
 
+\begin{figure}[htb]
+    \centering 
+    \includegraphics[width=0.5\linewidth]{circuit.png}
+    \caption{\label{fig:circuit}Circuit diagram of setup.}
+\end{figure}
+
 The steps that we followed were:
 \begin{enumerate}
     \item Connect setup to resistor.
@@ -87,9 +93,9 @@ The lower portion of one multimeter was set to DCA (the ammeter) and the other t
 
 We started with the resistor that had the colour bands blue-grey-brown-gold. We performed steps 1-3 with each of the seven resistors that were available to us. Then we changed the voltage, and repeated steps 1-3. We did this a total of three times. Thus, we had three data points for each of the seven resistors. At this point, we realized that we needed to have a lot of data points for a few resistors rather than a few points for a lot of resistors. So, we conducted another round of data collection. 
 
-We selected three resistors (blue-grey-brown-gold, green-orange-brown-gold, orange-orange-black-gold), and for each of them, we repeated steps 3-4 a total of seven times. So, including the three data points collected earlier, we had a total of 10 data points for these three resistors. We decided not to include the data for the other four resistors. 
+We selected four resistors (blue-grey-brown-gold, green-orange-brown-gold, orange-orange-orange-gold, and grey-orange-red-gold), and for each of them, we repeated steps 3-4 a total of seven times. So, including the three data points collected earlier, we had a total of 10 data points for these four resistors. We decided not to include the data for the other three resistors. 
 
-Afterwards, we disassembled the setup. We took one of the multimeters, and used it to measure the resistance of the three resistors that we had 10 data points for. One side of the resistor was connected to the common terminal of the multimeter, and the other to the voltage/resistance terminal. The lower portion of the multimeter was set to read the resistance. The upper portion was again, set to the lowest setting which gave us a readable output. For the blue-grey-brown-gold and the green-orange-brown-gold resistors, this was the 2 kiloohm setting, and for the orange-orange-black-gold resistor, this was the 200 ohm setting. 
+Afterwards, we disassembled the setup. We took one of the multimeters, and used it to measure the resistance of the three resistors that we had 10 data points for. One side of the resistor was connected to the common terminal of the multimeter, and the other to the voltage/resistance terminal. The lower portion of the multimeter was set to read the resistance. The upper portion was again, set to the lowest setting which gave us a readable output. This was the 2 kiloohm setting for the blue-grey-brown-gold and the green-orange-brown-gold resistors, the 20 kiloohm setting for the grey-orange-red-gold resistor, and the 200 kiloohm setting for the orange-orange-orange-gold resistor.
 
 \section{Data}
 
@@ -117,7 +123,7 @@ Afterwards, we disassembled the setup. We took one of the multimeters, and used 
 
 
 \begin{table}[htb]
-    \caption{\label{tab:tab2}Data for orange-orange-black-gold resistor.}
+    \caption{\label{tab:tab2}Data for orange-orange-orange-gold resistor.}
     \vspace{1em}\hline\hline\vspace{0.3em}\centering
     \begin{tabular}{cccc}
         Current (mA)&Current Uncertainty (mA)&Voltage (V)&Voltage Uncertainty (V)\\
@@ -161,24 +167,46 @@ Afterwards, we disassembled the setup. We took one of the multimeters, and used 
 
 
 \begin{table}[htb]
-    \caption{\label{tab:tab4}Calculated, measured, and read resistances compared.}
+    \caption{\label{tab:tab4}Data for blue-grey-brown-gold resistor.}
     \vspace{1em}\hline\hline\vspace{0.3em}\centering
-    \begin{tabular}{ccccccc}
-        &Average Calculated&Standard&Measured&Measurement&Colour Band&Tolerance\\
-        &Resistance&Error&Resistance&Uncertainty&Resistance&\\
+    \begin{tabular}{cccc}
+        Current (mA)&Current Uncertainty (mA)&Voltage (V)&Voltage Uncertainty (V)\\
         \hline
-        grey-orange-&1230.45 \Omega&.42 \Omega&814 \Omega&2 \Omega&830 \Omega&42 \Omega \\
-        -brown-gold&&&&&& \\
-        orange-orange-&29.96 \Omega&0.02 \Omega&33.4 \Omega&0.1 \Omega&33 \Omega&2 \Omega \\
-        -black-gold&&&&&& \\
-        blue-grey-&1485.7 \Omega&0.7 \Omega&675 \Omega& 1 \Omega&680 \Omega&34 \Omega \\
-        -brown-gold&&&&&& \\
+
+0.518 mA&0.004 mA&4.34 V&0.01 V\\
+0.675 mA&0.005 mA&5.58 V&0.01 V\\
+0.785 mA&0.006 mA&6.49 V&0.02 V\\
+0.926 mA&0.007 mA&7.65 V&0.02 V\\
+1.060 mA&0.008 mA&8.77 V&0.02 V\\
+1.382 mA&0.010 mA&11.43 V&0.03 V\\
+1.448 mA&0.011 mA&11.97 V&0.03 V\\
+1.666 mA&0.012 mA&13.78 V&0.03 V\\
+1.869 mA&0.015 mA&15.48 V&0.04 V\\
+2.13 mA&0.02 mA&17.6 V&0.04 V\\
 
     \end{tabular}
     \hline\hline
 \end{table}
 
 
+\begin{table}[htb]
+    \caption{\label{tab:tab5}Calculated, measured, and read resistances compared.}
+    \vspace{1em}\hline\hline\vspace{0.3em}\centering
+    \begin{tabular}{ccccccc}
+        &Average Calculated&Standard&Measured&Measurement&Colour Band&Tolerance\\
+        &Resistance&Error&Resistance&Uncertainty&Resistance&\\
+        \hline
+        grey-orange-&1230.45 $\Omega$&.42 $\Omega$&814 $\Omega$&2 $\Omega$&830 $\Omega$&42 $\Omega$ \\
+        -brown-gold&&&&&& \\
+        orange-orange-&29.96 $\Omega$&0.02 $\Omega$&33.4 $\Omega$&0.1 $\Omega$&33 $\Omega$&2 $\Omega$ \\
+        -black-gold&&&&&& \\
+        blue-grey-&1485.7 $\Omega$&0.7 $\Omega$&675 $\Omega$& 1 $\Omega$&680 $\Omega$&34 $\Omega$ \\
+        -brown-gold&&&&&& \\
+        blue-grey-&8280.14 $\Omega$&3.50 $\Omega$&8270 $\Omega$&17 $\Omega$&8300 $\Omega$&415 $\Omega$ \\
+        -brown-gold&&&&&& \\
+    \end{tabular}
+    \hline\hline
+\end{table}
 
 
 \end{document}
