--- a/ohm/lab.tex
+++ b/ohm/lab.tex
@@ -5,7 +5,7 @@
 \usepackage{lipsum}
 \usepackage{titlesec}
 \usepackage{longtable}
-\usepackage[top=0.7in,bottom=1in,left=0.85in,right=0.85in]{geometry}
+\usepackage[top=0.6in,bottom=1in,left=0.8in,right=0.8in]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage{listings}
 \usepackage{xcolor}
@@ -17,7 +17,7 @@
 % inter-paragraph spacing
 \setlength{\parskip}{1em}
 % line spacing
-\onehalfspacing
+\setstretch{1.25}
 
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
@@ -66,6 +66,10 @@
 
 \section{Introduction}
 
+The purpose of this exercise is to investigate how current, voltage, and resistance are related by Ohm's Law. We vary the voltage and see how that changes the current in a circuit. We then use these values to calculate resistance (with errors propagated through), and compare this to reference values. 
+
+\section{Setup}
+
 The setup of the circuit was as follows:
 \begin{itemize}
     \item negative terminal of the power supply connected to the common terminal  of multimeter \#1
@@ -81,7 +85,8 @@ The setup of the circuit was as follows:
     \caption{\label{fig:circuit}Circuit diagram of setup.}
 \end{figure}
 
-The steps that we followed were:
+\section{Method}
+
 \begin{enumerate}
     \item Connect setup to resistor.
     \item Turn on power supply and both multimeters.
@@ -89,19 +94,17 @@ The steps that we followed were:
     \item Change the voltage. 
 \end{enumerate}
 
-The lower portion of one multimeter was set to DCA (the ammeter) and the other to DCV (the voltmeter). The upper portions of the ammeter and the voltmeter were set to the lowest settings which still gave a readout (in order to get the most digits possible). In most cases, the voltmeter was at the 20V setting. We used the 2mA, 20mA, and 200mA settings on the ammeter. 
+Set the lower portion of one multimeter to DCA (the ammeter) and the other to DCV (the voltmeter). The upper portions of the ammeter and the voltmeter are set to the lowest settings which still give a readout (in order to get the most digits possible). In most cases, the voltmeter should be at the 20V setting, and the ammeter will use the 2mA, 20mA, and 200mA settings.
 
-We started with the resistor that had the colour bands blue-grey-brown-gold. We performed steps 1-3 with each of the seven resistors that were available to us. Then we changed the voltage, and repeated steps 1-3. We did this a total of three times. Thus, we had three data points for each of the seven resistors. At this point, we realized that we needed to have a lot of data points for a few resistors rather than a few points for a lot of resistors. So, we conducted another round of data collection. 
+Select four resistors (blue-grey-brown-gold, green-orange-brown-gold, orange-orange-orange-gold, and grey-orange-red-gold). Start with one, and, repeat steps 3-4 a total of ten times. Disconnect the setup, and complete steps 1-4 for each of the other three resistors. There should be 40 data points. 
 
-We selected four resistors (blue-grey-brown-gold, green-orange-brown-gold, orange-orange-orange-gold, and grey-orange-red-gold), and for each of them, we repeated steps 3-4 a total of seven times. So, including the three data points collected earlier, we had a total of 10 data points for these four resistors. We decided not to include the data for the other three resistors. 
-
-Afterwards, we disassembled the setup. We took one of the multimeters, and used it to measure the resistance of the three resistors that we had 10 data points for. One side of the resistor was connected to the common terminal of the multimeter, and the other to the voltage/resistance terminal. The lower portion of the multimeter was set to read the resistance. The upper portion was again, set to the lowest setting which gave us a readable output. This was the 2 kiloohm setting for the blue-grey-brown-gold and the green-orange-brown-gold resistors, the 20 kiloohm setting for the grey-orange-red-gold resistor, and the 200 kiloohm setting for the orange-orange-orange-gold resistor.
+Afterwards, disassemble the setup. Take one of the multimeters, and use it to measure the resistance for each of the four resistors. Connect one side of the resistor to the common terminal of the multimeter, and the other to the voltage/resistance terminal. Set the lower portion of the multimeter to read the resistance. Set the upper portion, again, to the lowest setting which gives a readable output. This is the 2 kiloohm setting for the blue-grey-brown-gold and the green-orange-brown-gold resistors, the 20 kiloohm setting for the grey-orange-red-gold resistor, and the 200 kiloohm setting for the orange-orange-orange-gold resistor.
 
 \section{Data}
 
 
-\begin{table}[htb]
-    \caption{\label{tab:tab1}Data for grey-orange-brown-gold resistor.}
+\begin{table}[!htb]
+    \caption{Data for grey-orange-brown-gold resistor.}
     \vspace{1em}\hline\hline\vspace{0.3em}\centering
     \begin{tabular}{cccc}
         Current (mA)&Current Uncertainty (mA)&Voltage (V)&Voltage Uncertainty (V)\\
@@ -122,8 +125,8 @@ Afterwards, we disassembled the setup. We took one of the multimeters, and used 
 \end{table}
 
 
-\begin{table}[htb]
-    \caption{\label{tab:tab2}Data for orange-orange-orange-gold resistor.}
+\begin{table}[!htb]
+    \caption{Data for orange-orange-orange-gold resistor.}
     \vspace{1em}\hline\hline\vspace{0.3em}\centering
     \begin{tabular}{cccc}
         Current (mA)&Current Uncertainty (mA)&Voltage (V)&Voltage Uncertainty (V)\\
@@ -143,8 +146,8 @@ Afterwards, we disassembled the setup. We took one of the multimeters, and used 
     \hline\hline
 \end{table}
 
-\begin{table}[htb]
-    \caption{\label{tab:tab3}Data for blue-grey-brown-gold resistor.}
+\begin{table}[!htb]
+    \caption{Data for blue-grey-brown-gold resistor.}
     \vspace{1em}\hline\hline\vspace{0.3em}\centering
     \begin{tabular}{cccc}
         Current (mA)&Current Uncertainty (mA)&Voltage (V)&Voltage Uncertainty (V)\\
@@ -166,8 +169,8 @@ Afterwards, we disassembled the setup. We took one of the multimeters, and used 
 \end{table}
 
 
-\begin{table}[htb]
-    \caption{\label{tab:tab4}Data for blue-grey-brown-gold resistor.}
+\begin{table}[!htb]
+    \caption{Data for blue-grey-brown-gold resistor.}
     \vspace{1em}\hline\hline\vspace{0.3em}\centering
     \begin{tabular}{cccc}
         Current (mA)&Current Uncertainty (mA)&Voltage (V)&Voltage Uncertainty (V)\\
@@ -188,25 +191,61 @@ Afterwards, we disassembled the setup. We took one of the multimeters, and used 
     \hline\hline
 \end{table}
 
+Uncertainties were calculated according to the lab instructions. We took the largest of the error of accuracy and error of precision, and rounded the uncertainty to match the decimal place of the measurement. 
+
+\newpage
+\section{Results}
+
+Using the voltage and the current, we calculate the resistance of each resistor following Ohm's Law:
+\begin{alignat*}{2}
+    &&V &= IR \\
+    \implies&&R &= \frac{V}{I} \\
+\end{align*}
+Since our measurements for current were all done in mA, we need to divide them by 1000 to ensure that units are consistent (A, V, $\Omega$). 
+
+So, for each resistor, we have 10 resistance calculations. Then, we calculate the average calculated resistances according to the formula 
+\begin{align*}
+    \overline{R} = \frac{1}{10}\sum_{i=1}^{10}R_i.
+\end{align*}
+
+The standard error is calculated as 
+\begin{align*}
+    SE = \frac{s}{\sqrt{N}},
+\end{align*}
+where 
+\begin{align*}
+    s = \sqrt{\frac{\sum_{i=1}^{10}(R_i - \overline{R})^2}{9}}.
+\end{align*}
+
+The measurement uncertainty was again the maximum of the uncertainty in accuracy and precision, where the uncertainty in accuracy is taken from the specifications of the multimeter as a percentage of the reading. 
 
 \begin{table}[htb]
-    \caption{\label{tab:tab5}Calculated, measured, and read resistances compared.}
+    \caption{Calculated, measured, and read resistances compared.}
     \vspace{1em}\hline\hline\vspace{0.3em}\centering
     \begin{tabular}{ccccccc}
         &Average Calculated&Standard&Measured&Measurement&Colour Band&Tolerance\\
         &Resistance&Error&Resistance&Uncertainty&Resistance&\\
         \hline
-        grey-orange-&1230.45 $\Omega$&.42 $\Omega$&814 $\Omega$&2 $\Omega$&830 $\Omega$&42 $\Omega$ \\
+        grey-orange-&813 $\Omega$&.3 $\Omega$&814 $\Omega$&2 $\Omega$&830 $\Omega$&42 $\Omega$ \\
         -brown-gold&&&&&& \\
-        orange-orange-&29.96 $\Omega$&0.02 $\Omega$&33.4 $\Omega$&0.1 $\Omega$&33 $\Omega$&2 $\Omega$ \\
-        -black-gold&&&&&& \\
-        blue-grey-&1485.7 $\Omega$&0.7 $\Omega$&675 $\Omega$& 1 $\Omega$&680 $\Omega$&34 $\Omega$ \\
+        orange-orange-&33384 $\Omega$&25 $\Omega$&33400 $\Omega$&66.8 $\Omega$&33000 $\Omega$&1650 $\Omega$ \\
+        -orange-gold&&&&&& \\
+        blue-grey-&673.1 $\Omega$&.3 $\Omega$&675 $\Omega$& 1 $\Omega$&680 $\Omega$&34 $\Omega$ \\
         -brown-gold&&&&&& \\
-        blue-grey-&8280.14 $\Omega$&3.50 $\Omega$&8270 $\Omega$&17 $\Omega$&8300 $\Omega$&415 $\Omega$ \\
+        blue-grey-&8280.1 $\Omega$&3.5 $\Omega$&8270 $\Omega$&17 $\Omega$&8300 $\Omega$&415 $\Omega$ \\
         -brown-gold&&&&&& \\
     \end{tabular}
     \hline\hline
 \end{table}
 
+\section{Sources of Uncertainty}
+
+We did not carry out the experiment as described above. We started with the resistor that has the colour bands blue-grey-brown-gold. We repeated steps 1-3 for each of the resistors. Then, we changed the voltage, and repeated steps 1-3 for each of the resistors again. We did this a total of three times. So, we had three data points for each of the seven resistors. At this point, we realized that we needed to have a lot of data points for a few resistors rather than a few points for a lot of resistors. So, we conducted another round of data collection. We followed the procedure described above, but rather than 10 data points, we collected 7 for each of the 4 resistors. So, we had 10 data points (3+7) for four resistors, and 3 data points for three resistors. So, including the three data points collected earlier, we had a total of 10 data points for these four resistors. We decided not to include the data for the other three resistors. Since we disconnected the setup in between the two rounds of data collection, there may be some 
+
+Furthermore, before the experiment started, one of our multimeters broke, and we switched it out. The multimeter might be a source of uncertainty, whether it be because of additional resistance or fluctutations in readings. 
+
+\section{Conclusion}
+
+In this lab, we set out to investigate the relationship between current, voltage, and resistance. By repeatedly taking measurements of voltage and current using different resistors, we found that for a fixed resistance, current and voltage have a positive linear relationship. We practiced propagating errors throughout our calculations, and found that most of our measurements were within acceptable parameters. 
 
 \end{document}
