comp1 random file edits?

--- a/comp1/lab.ipynb
+++ b/comp1/lab.ipynb
@@ -12,13 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
     "import numpy as np\n",
-    "from scipy.integrate import simps"
+    "from scipy.integrate import simps\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -179,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,20 +218,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.77\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2914"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "vectorized_gpa = np.vectorize(gpa)\n",
-    "print(vectorized_gpa(marks).mean())"
+    "vectorized_gpa = np.vectorize(gpa)\n"
    ]
   },
   {
