--- a/pylab2/pylab2.ipynb
+++ b/pylab2/pylab2.ipynb
@@ -1,11 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PyLab 2\n",
+    "\n",
+    "PHY224H1S | 2020 Winter\n",
+    "\n",
+    "Jeff Shen | 1004911526\n",
+    "\n",
+    "Stacy Ossipov | 1004877779\n",
+    "\n",
+    "31 Jan 2020"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imports\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -14,18 +31,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# defining functions\n",
+    "\n",
+    "# linear model\n",
+    "def f(x, a, b):\n",
+    "    return a * x + b\n",
+    "\n",
+    "# nonlinear model\n",
+    "def g(x, a, b):\n",
+    "    return b * np.exp(a * x)\n",
+    "\n",
+    "# theoretical model\n",
+    "def theoretical(x, a, b):\n",
+    "    return b * np.power(0.5, x / a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f(x, a, b):\n",
-    "    return a * x + b\n",
-    "\n",
-    "def g(x, a, b):\n",
-    "    return b * np.exp(a * x)\n",
-    "\n",
-    "def theoretical(x, a, b):\n",
-    "    return b * np.power(0.5, x / a)"
+    "# reading data\n",
+    "_, background = np.loadtxt('RadioactiveDecay_TuesdayOct2_2018_background.txt', skiprows=2, unpack=True)\n",
+    "sampleid, decay = np.loadtxt('RadioactiveDecay_TuesdayOct2_2018_decay.txt', skiprows=2, unpack=True)"
    ]
   },
   {
@@ -34,8 +67,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_, background = np.loadtxt('RadioactiveDecay_TuesdayOct2_2018_background.txt', skiprows=2, unpack=True)\n",
-    "sampleid, decay = np.loadtxt('RadioactiveDecay_TuesdayOct2_2018_decay.txt', skiprows=2, unpack=True)"
+    "# adjusting time, subtracting background from measurements\n",
+    "\n",
+    "sampleid *= 20\n",
+    "clean = decay - background.mean()"
    ]
   },
   {
@@ -44,32 +79,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampleid *= 20\n",
-    "clean = decay - background.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# calculating errors\n",
+    "\n",
     "stddev = np.sqrt(decay + background)\n",
     "err = np.abs(stddev / clean)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x120dd7150>]"
+       "[<matplotlib.lines.Line2D at 0x126dd85d0>]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -87,16 +114,38 @@
     }
    ],
    "source": [
+    "# initial plot, sanity check\n",
     "plt.plot(sampleid, clean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fit with linear model\n",
+    "popt, pcov = curve_fit(f, sampleid, np.log(clean))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-4.39942710e-03  7.82635203e+00]\n",
+      "[5.15796673e-05 3.61818282e-02]\n"
+     ]
+    }
+   ],
    "source": [
-    "popt, pcov = curve_fit(f, sampleid, np.log(clean))"
+    "# print parameters and corresponding errors\n",
+    "print(popt)\n",
+    "print(np.sqrt(np.diag(pcov)))"
    ]
   },
   {
@@ -105,39 +154,18 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(array([-4.39942710e-03,  7.82635203e+00]),\n",
-       " array([5.15796673e-05, 3.61818282e-02]))"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "half-life: 157.55396422235438 seconds\n",
+      "error: 2.6649329344915813 seconds\n"
+     ]
     }
    ],
    "source": [
-    "popt, np.sqrt(np.diag(pcov))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(157.55396422235438, 2.6649329344915813)"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1/popt[0] * np.log(0.5), np.sqrt(np.diag(pcov))[0] / np.square(popt[0])"
+    "# print half life and corresponding error\n",
+    "print(f'half-life: {1/popt[0] * np.log(0.5)} seconds')\n",
+    "print(f'error: {np.sqrt(np.diag(pcov))[0] / np.square(popt[0])} seconds') "
    ]
   },
   {
@@ -149,13 +177,34 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:5: RuntimeWarning: overflow encountered in exp\n",
-      "  \"\"\"\n"
+      "/usr/local/lib/python3.7/site-packages/ipykernel_launcher.py:9: RuntimeWarning: overflow encountered in exp\n",
+      "  if __name__ == '__main__':\n"
      ]
     }
    ],
    "source": [
+    "# fit with nonlinear model\n",
     "popt2, pcov2 = curve_fit(g, sampleid, clean, p0=(-0.01, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-4.27694055e-03  2.43989747e+03]\n",
+      "[3.16977005e-05 1.33397038e+01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# printing parameters and corresponding errors\n",
+    "print(popt2)\n",
+    "print(np.sqrt(np.diag(pcov2)))"
    ]
   },
   {
@@ -164,44 +213,23 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(array([-4.27694055e-03,  2.43989747e+03]),\n",
-       " array([3.16977005e-05, 1.33397038e+01]))"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "half-life: 162.0661245227056 seconds\n",
+      "error: 1.7328514337306509 seconds\n"
+     ]
     }
    ],
    "source": [
-    "popt2, np.sqrt(np.diag(pcov2))"
+    "# print half life and corresponding error\n",
+    "print(f'half-life: {1/popt2[0] * np.log(0.5)} seconds')\n",
+    "print(f'error: {np.sqrt(np.diag(pcov2))[0] / np.square(popt2[0])} seconds')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(162.0661245227056, 1.7328514337306509)"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1/popt2[0] * np.log(0.5), np.sqrt(np.diag(pcov2))[0] / np.square(popt2[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -218,6 +246,7 @@
     }
    ],
    "source": [
+    "# plotting time vs rate on linear scale\n",
     "plt.figure(figsize=(16, 12))\n",
     "plt.errorbar(sampleid, clean, err, ls='', marker='o')\n",
     "plt.plot(sampleid, np.exp(f(sampleid, *popt)), c='g', label='linear fit')\n",
@@ -232,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -249,6 +278,7 @@
     }
    ],
    "source": [
+    "# same plot as above but on a log scale for the y axis\n",
     "plt.figure(figsize=(16, 12))\n",
     "plt.errorbar(sampleid, clean, err, ls='', marker='o')\n",
     "plt.plot(sampleid, np.exp(f(sampleid, *popt)), c='g', label='linear fit')\n",
@@ -264,39 +294,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reduced chi squared function\n",
     "def rcs(pred, target, uncertainty, n_params):\n",
     "    return np.square((pred - target) / uncertainty).sum() / (pred.size - n_params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "729121.9026490474\n",
-      "354421.12337128626\n"
+      "reduced chi squared for linear model: 729121.9026490474\n",
+      "reduced chi squared for non-linear model: 354421.12337128626\n"
      ]
     }
    ],
    "source": [
-    "print(rcs(np.exp(f(sampleid, *popt)), clean, err, 2))\n",
-    "print(rcs(g(sampleid, *popt2), clean, err, 2)) # why so high?"
+    "# print reduced chi squares for models\n",
+    "print(f'reduced chi squared for linear model: {rcs(np.exp(f(sampleid, *popt)), clean, err, 2)}')\n",
+    "print(f'reduced chi squared for non-linear model: {rcs(g(sampleid, *popt2), clean, err, 2)}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
